tests/machine/x/rb/python_auto.rb
puts(math.sqrt.call(16.0))
puts(math.pi)
